# vertX3D

./: CMakeLists.txt  README.md  fluidization.cpp  homeostasis.cpp  spreading_flat.cpp
examples/: fluidization.cpp  homeostasis.cpp  sphere.cpp  spreading_flat.cpp  spreading_sphere.cpp
include/: LBFGS_helpers.h  T1_transformation.h  allocate.h  apical_side.h  basal_network.h  basal_side.h  cell_division.h  cell_extrusion.h  copy_to_apical.h  dissolve.h  distances.h  equation_of_motion.h  force_area.h  force_volume.h  force_volume_yolk.h  freeid.h  functions.h  initial_structure.h  lateral_side.h  list_manipulation.h  output.h  rndom.h  torus.h  vert_edg_fac.h
